--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VTU MUSH</title>
+    <title>StudySphere</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -43,6 +43,7 @@
         .firstsection{
             display: flex;
             justify-content: space-around;
+            align-items: center;
             margin: 80px 0;
         }
         .firstsection > div{
@@ -50,7 +51,7 @@
         }
         .leftsection{
             font-size:  3rem;
-            margin: 30px 0;
+            margin: 70px 0;
         }
         .rightsection img{
             width: 80%;
@@ -66,7 +67,7 @@
 <body>
     <header>
         <nav>
-            <div class="left">VTU MUSH</div>
+            <div class="left">Study<span class="purple">S</span>phere</div>
             <div class="right">
                 <ul>
                     <li>Home</li>
@@ -81,7 +82,8 @@
     <main>
         <section class="firstsection">
             <div class="leftsection">
-                Hi, We are <span class="purple">VTU</span> students and we are CSE aspirants
+                Hi, We are <span class="purple">VTU</span> students and 
+                <div>we are CSE aspirants</div>
             </div>
             <div class="rightsection">
             <img src="clgstudents.webp" alt="">
