--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
             <div class="left">Study<span class="purple">S</span>phere</div>
             <div class="right">
                 <ul>
-                    <li>Home</li>
-                    <li>Scheme</li>
-                    <li>About</li>
-                    <li>Contact Us</li>
+                    <a href=""><li>Home</li></a>
+                    <a href=""><li>Scheme</li></a>
+                    <a href=""><li>About</li></a>
+                    <a href=""><li>Contact Us</li></a>
                 </ul>
             </div>
         </nav>
