--- a/website/index.html
+++ b/website/index.html
@@ -72,11 +72,9 @@
             font-size: 2.5rem;
             margin: 70px 0;
         }
-
-        .leftsection .btn {
+        .leftsection .btn{
             padding: 12px;
         }
-
         .rightsection img {
             width: 80%;
             margin: 50px 0;
@@ -118,6 +116,7 @@
                     <div class="btn">
                         <button
                             style="
+                            padding: 12px;
                             background-color: #1e2167; 
                             color: white; 
                             border: 2px solid white; 
