--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
         nav {
             display: flex;
+            margin: auto;
             justify-content: space-around;
             align-items: center;
             padding: 20px;
@@ -154,7 +155,7 @@
                     <li class="navbar-item dropdown">
                         <a href="#">Scheme</a>
                         <ul class="dropdown-menu">
-                            <li><a href="scheme-1.html">2022 Scheme</a></li>
+                            <li><a href="scheme.html">2022 Scheme</a></li>
                         </ul>
                     </li>
                     <li><a href="/">About</a></li>
