--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="left"><a href="/index.html">Study<span class="purple">S</span>phere</a></div>
             <div class="right">
                 <ul>
-                    <li><a href="/">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li class="navbar-item dropdown">
                         <a href="#">Scheme</a>
                         <ul class="dropdown-menu">
