--- a/scheme.html
+++ b/scheme.html
@@ -14,232 +14,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            background-color: ffffff;
-            color: rgb(0, 0, 0);
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            padding: 20px;
-            height: 80px;
-            background-color: rgb(250, 250, 250);
-            border-bottom: 1px solid #7d7a7a;
-        }
-
-        nav ul {
-            display: flex;
-            justify-content: center;
-        }
-
-        nav ul li {
-            list-style-type: none;
-            margin: 0 23px;
-            margin-top: 5%;
-            font-size: 1.25rem;
-
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: rgb(0, 0, 0);
-        }
-
-        nav ul li a:hover {
-            color: rgb(137, 137, 240);
-            font-size: 1.26rem;
-
-        }
-
-        .left {
-            font-size: 2rem;
-        }
-
-        .left a {
-            font-size: 2rem;
-            cursor: pointer;
-            color: #000000;
-            text-decoration: none;
-        }
-
-        .firstsection {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            margin: 80px 0;
-        }
-
-        .firstsection>div {
-            width: 30%;
-        }
-
-        .purple {
-            color: blueviolet;
-
-        }
-
-        #element {
-            color: blueviolet
-        }
-
-        .dropdown-menu {
-            display: none;
-            /* Initially hidden */
-            position: absolute;
-            /* Absolute positioning relative to the parent */
-            top: 100%;
-            /* Positioned below the parent item */
-            left: 0;
-            background-color: #444;
-            /* Background color of the dropdown */
-            padding: 10px 0;
-            margin: 0;
-            list-style-type: none;
-            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
-            /* Dropdown shadow */
-        }
-
-        /* Styles for the dropdown menu items */
-        .dropdown-menu li {
-            padding: 0;
-            margin: 0;
-        }
-
-        /* Styles for the links inside the dropdown */
-        .dropdown-menu a {
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            display: block;
-        }
-
-        /* Change color on hover for dropdown links */
-        .dropdown-menu a:hover {
-            background-color: #555;
-        }
-
-        /* Display the dropdown on hover */
-        .navbar-item.dropdown:hover .dropdown-menu {
-            display: block;
-        }
-
-        /* Container for the main content */
-        .main-container {
-            width: 100%;
-            max-width: 600px;
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            text-align: center;
-            margin: auto;
-            margin-top: 6%;
-            margin-bottom: 20px;
-        }
-
-        /* Styling for the content inside the container */
-        .content h1 {
-            margin-bottom: 20px;
-            font-size: 24px;
-            color: #333;
-        }
-
-        /* Styling for the selection button container */
-        .selection-button {
-            margin-bottom: 20px;
-        }
-
-        /* Styling for the select dropdown */
-        .selection-button select {
-            padding: 10px;
-            font-size: 16px;
-            width: 80%;
-            max-width: 300px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-
-        /* Container for semester buttons */
-        .semester-buttons {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        /* Styling for each semester button */
-        .semester-button {
-            padding: 15px 30px;
-            font-size: 18px;
-            color: #fff;
-            background-color: rgb(157, 90, 219);
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: transform 0.3s, background-color 0.3s;
-            width: 45%;
-            max-width: 200px;
-            margin: 5px 0;
-        }
-
-        /* Hover effect for the semester buttons */
-        .semester-button:hover {
-            background-color: rgb(143, 34, 245);
-            transform: translateY(-5px);
-        }
-
-        /* Styling for the subject section */
-        .subject-section {
-            text-align: center;
-            margin-top: 20px;
-            padding: 20px;
-            width: 100%;
-            max-width: 800px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            margin: auto;
-            margin-top: 2%;
-            margin-bottom: 2%;
-        }
-
-        /* Title for the subject section */
-        .subject-section h2 {
-            margin-bottom: 20px;
-            font-size: 22px;
-            color: #333;
-        }
-
-        /* Styling for each subject button */
-        .subject-button {
-            padding: 15px 20px;
-            font-size: 16px;
-            color: #fff;
-            background-color: #007bff;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            margin: 10px;
-            transition: transform 0.3s, background-color 0.3s;
-            width: 30%;
-            max-width: 250px;
-        }
-
-        /* Hover effect for the subject buttons */
-        .subject-button:hover {
-            background-color: #0068d8;
-            transform: translateY(-5px);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
