--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </section>
     </main>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="script.js"></script>
+    <script src="navbar.js"></script>
 </body>
 
 </html>
